--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   @include('html/head/index.html')
-  <title>Защита авторских прав - Профессиональный подход</title>
+  <title>Защита прав фотографов</title>
 </head>
 
 <body class="indent-reset site custom-scroll">
