--- a/src/html/head/index.html
+++ b/src/html/head/index.html
@@ -2,7 +2,7 @@
 <meta name="viewport"
       content="width=device-width, initial-scale=1.0">
 <meta name="description"
-      content="Используют Ваши фотографии без разрешения? Мы поможем! Поиск плагиата с помощью автоматизированного робота. Отчетность. По договору. Без вложений с вашей стороны! Звоните! Работаем по всей РФ">
+      content="Профессиональная защита прав фотографов. Автоматизированный поиск плагиата 24/7. Дополнительный доход для вас. Работаем по договору по всей РФ. Без вложений с вашей стороны. Звоните! 8 800-200-37-30">
 <meta http-equiv="X-UA-Compatible"
       content="ie=edge">
 <link rel="icon"
