поправил текст раздела "вопрос-ответ"

--- a/src/html/main/faq.html
+++ b/src/html/main/faq.html
@@ -57,7 +57,8 @@
         <details class="is-glassmorphed faq-item">
           <summary class="faq-item__title">Много ли своего времени я потрачу?</summary>
           <div class="faq-item__content">
-            <p>Ваши временные затраты будут минимальны. Затраченное вами время на подписание договора в совокупности с иными действиями составляет менее 1%, если бы вы занимались защитой своих прав самостоятельно. 99% ваших временных затрат мы берем на себя, а вы занимаетесь своим любимым творчеством.</p>
+            <p>Ваши временные затраты будут минимальны. Затраченное вами время на подписание договора в совокупности с иными действиями составляет менее 1%  от времени, потраченного вами, если бы вы занимались защитой своих прав самостоятельно.</p>
+            <p>99% ваших временных затрат мы берем на себя, а вы занимаетесь своим любимым творчеством.</p>
           </div>
         </details>
       </li>
