--- a/src/html/var-text/phone-main.html
+++ b/src/html/var-text/phone-main.html
@@ -1,1 +1,1 @@
-<a href="tel:88002003730">8 800 200 37 30</a>
+<a href="tel:88002003730" onclick="ym(93273407,'reachGoal','click_tel'); return true;">8 800 200 37 30</a>
