Поправил цели у форм

--- a/src/html/main/contacts.html
+++ b/src/html/main/contacts.html
@@ -9,7 +9,7 @@
       <form class="form contacts__form"
             id="contacts-form"
             data-validate
-            onclick="ym(93273407,'reachGoal','submit_writeUs'); return true;">
+            onsubmit="ym(93273407,'reachGoal','submit_writeUs'); return true;">
         <input type="hidden"
                name="Форма"
                value="Напишите нам">
