добавил разметку блока с видео

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
       </main>
       @include('html/footer/index.html')
     </div>
+    @include('html/utils/about-us.html')
     @include('html/utils/scroll-top.html')
   </div>
   @include('html/modal/index.html')
