--- a/src/html/head/styles.html
+++ b/src/html/head/styles.html
@@ -1,4 +1,4 @@
 <link rel="stylesheet"
       href="style/vendor-bundle.css">
 <link rel="stylesheet"
-      href="style/main.css">
+      href="style/main.css?ver=2.0.2">
