--- a/src/html/main/get-profit.html
+++ b/src/html/main/get-profit.html
@@ -17,8 +17,9 @@
         <span>Успех получения автором выплаты при сотрудничестве с нами</span>
       </li>
       <li class="profit-advantages__item is-glassmorphed">
-        <span class="is-accent profit-advantages__nums">24/7</span>
-        <span>Новый уровень автоматизации поиска плагиата – мониторинг нарушений антиплагиат роботом 24/7</span>
+        <span class="is-accent profit-advantages__nums">100%
+        </span>
+        <span>Затрат берём на себя!</span>
       </li>
     </ul>
     <div class="get-profit__ellipse ellipse"
