--- a/src/html/main/contacts.html
+++ b/src/html/main/contacts.html
@@ -106,6 +106,16 @@
           </ul>
         </li>
       </ul>
+      <div class="contacts__details">
+        <div>ООО "Альфа-Информ"</div>
+        <div>ИНН 5837072546</div>
+        <div>440026, Пензенская обл, Пенза г, Красная ул, дом 9</div>
+        <div>тел.: (8412) 46-14-15, (8412) 51-61-61</div>
+        <div>р/с 40702810129170002037</div>
+        <div>в банке ФИЛИАЛ "НИЖЕГОРОДСКИЙ" АО "АЛЬФА-БАНК"</div>
+        <div>БИК 042202824</div>
+        <div>к/с 30101810200000000824</div>
+      </div>
     </div>
     <div class="contacts__ellipse ellipse"
          aria-hidden="true">
