Изменил название формы и кнопок вызова

--- a/src/html/modal/request.html
+++ b/src/html/modal/request.html
@@ -17,14 +17,14 @@
             <use xlink:href="img/sprite.svg#icon-cross"></use>
           </svg>
         </button>
-        <span class="is-accent h2 modal__title modal__centered">Оставить заявку</span>
+        <span class="is-accent h2 modal__title modal__centered">Зафиксировать правонарушение</span>
         <form class="form modal__form"
               id="request-form"
               data-validate
               onsubmit="ym(93273407,'reachGoal','submit_request'); return true;">
           <input type="hidden"
                  name="Форма"
-                 value="Оставить заявку">
+                 value="Зафиксировать правонарушение">
           <input type="hidden"
                  name="UTM&nbsp;параметры"
                  data-utm
