--- a/src/html/main/advantages.html
+++ b/src/html/main/advantages.html
@@ -53,7 +53,7 @@
       <button class="btn-reset btn advantages__cb-btn"
               type="button"
               data-hystmodal="#request-modal"
-              onclick="ym(93273407,'reachGoal','click_request2'); return true;">Оставить заявку</button>
+              onclick="ym(93273407,'reachGoal','click_request2'); return true;">Зафиксировать правонарушение</button>
     </div>
   </div>
 </section>
