--- a/src/html/main/for-whom.html
+++ b/src/html/main/for-whom.html
@@ -48,7 +48,7 @@
         <button class="btn-reset btn whom-item__btn"
                 type="button"
                 data-hystmodal="#request-modal"
-                onclick="ym(93273407,'reachGoal','click_application'); return true;">Оставить заявку</button>
+                onclick="ym(93273407,'reachGoal','click_application'); return true;">Зафиксировать правонарушение</button>
       </div>
     </div>
   </div>
