--- a/src/html/utils/counter.html
+++ b/src/html/utils/counter.html
@@ -1,17 +1,43 @@
 <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-  m[i].l=1*new Date();
-  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+<script type="text/javascript">
+  ( function( m, e, t, r, i, k, a ) {
+    m[ i ] = m[ i ] || function() {
+      ( m[ i ].a = m[ i ].a || [] ).push( arguments )
+    };
+    m[ i ].l = 1 * new Date();
+    for ( var j = 0; j < document.scripts.length; j++ ) {
+      if ( document.scripts[ j ].src === r ) {
+        return;
+      }
+    }
+    k = e.createElement( t ), a = e.getElementsByTagName( t )[ 0 ], k.async = 1, k.src = r, a.parentNode.insertBefore( k, a )
+  } )
+  ( window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym" );
 
-  ym(93273407, "init", {
-       clickmap:true,
-       trackLinks:true,
-       accurateTrackBounce:true,
-       webvisor:true
-  });
+  ym( 93273407, "init", {
+    clickmap: true,
+    trackLinks: true,
+    accurateTrackBounce: true,
+    webvisor: true
+  } );
 </script>
-<noscript><div><img src="https://mc.yandex.ru/watch/93273407" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<noscript>
+  <div><img src="https://mc.yandex.ru/watch/93273407"
+         style="position:absolute; left:-9999px;"
+         alt="" /></div>
+</noscript>
 <!-- /Yandex.Metrika counter -->
+
+
+<!-- Varioqub experiments -->
+<script type="text/javascript">
+  ( function( e, x, pe, r, i, me, nt ) {
+    e[ i ] = e[ i ] || function() {
+        ( e[ i ].a = e[ i ].a || [] ).push( arguments )
+      },
+      me = x.createElement( pe ), me.async = 1, me.src = r, nt = x.getElementsByTagName( pe )[ 0 ], nt.parentNode.insertBefore( me, nt )
+  } )
+  ( window, document, 'script', 'https://abt.s3.yandex.net/expjs/latest/exp.js', 'ymab' );
+  ymab( 'metrika.93273407', 'init' /*, {clientFeatures}, {callback}*/ );
+</script>
+<!-- /Varioqub experiments -->
