Изменил способ срабатывания целей на формах

--- a/src/html/main/contacts.html
+++ b/src/html/main/contacts.html
@@ -8,8 +8,7 @@
       </div>
       <form class="form contacts__form"
             id="contacts-form"
-            data-validate
-            onsubmit="ym(93273407,'reachGoal','submit_writeUs'); return true;">
+            data-validate>
         <input type="hidden"
                name="Форма"
                value="Напишите нам">
