--- a/src/html/modal/callback.html
+++ b/src/html/modal/callback.html
@@ -20,8 +20,7 @@
         <span class="is-accent h2 modal__title modal__centered">Заказать звонок</span>
         <form class="form modal__form"
               id="callback-form"
-              data-validate
-              onsubmit="ym(93273407,'reachGoal','submit_call'); return true;">
+              data-validate>
           <input type="hidden"
                  name="Форма"
                  value="Заказать звонок">
