--- a/src/html/modal/request.html
+++ b/src/html/modal/request.html
@@ -21,8 +21,7 @@
         <form class="form modal__form"
               id="request-form"
               enctype="multipart/form-data"
-              data-validate
-              onsubmit="ym(93273407,'reachGoal','submit_request'); return true;">
+              data-validate>
           <input type="hidden"
                  name="Форма"
                  value="Зафиксировать правонарушение">
